@@ -10,6 +10,7 @@ Pending changes in the mainline
 * New URL argument "menu" to change the layout of the list of studies/series
 * The first series to be loaded is now automatically opened
 * Annotations are grouped into one submenu for narrow screens
+* Support generation of ZIP archives in the presence of authorization tokens
 * Fix measurement of arcs
 * Width of the vertical slider has doubled to ease user interactions
 * Patient sex is displayed in the top-left information panel
